# controllers/exercisesDiary.js
@@ -1,10 +1,19 @@
 const { ExerciseDiary } = require("../models/exerciseDiary");
 
 const { HttpError, ctrlWrapper } = require("../helpers");
-const { Exercise } = require("../models/exercise");
+const Exercise = require("../models/exercise");
 
 const getDatedExercise = async (req, res) => {
   const { _id: owner } = req.user;
+
+  const {
+    userParams: { blood },
+  } = req.user;
+
+  if (!blood) {
+    throw HttpError(400, "Not user params");
+  }
+
   const { page = 1, limit = 10 } = req.query;
   const { date } = req.params;
   const skip = (page - 1) * limit;
@@ -47,9 +56,13 @@ const addDatedExercise = async (req, res) => {
 };
 
 const deleteDatedExercise = async (req, res) => {
+  const { _id: owner } = req.user;
   const { exerciseIdUser } = req.params;
+  const { date } = req.params;
   const result = await ExerciseDiary.findOneAndDelete({
     _id: exerciseIdUser,
+    owner,
+    date,
   });
   if (!result) {
     throw HttpError(404, "Not found");
